--- a/ZZ_holoviz_scanpy.ipynb
+++ b/ZZ_holoviz_scanpy.ipynb
@@ -489,141 +489,210 @@
    "id": "fe0284e4-da4a-4bac-8587-5cc3e3fce5ae",
    "metadata": {},
    "source": [
-    "with HoloViz:"
+    "with HoloViz v1:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4463537d-8cf4-42a4-8091-73bf982ed0b4",
+   "id": "22668482-112d-4bfc-a46a-0cc24295ab5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hv_pca_plots(adata, color, dimensions):\n",
+    "import holoviews.operation.datashader as hd\n",
+    "import datashader as ds\n",
+    "import colorcet as cc\n",
+    "import panel as pn\n",
+    "import numpy as np\n",
+    "import holoviews as hv\n",
+    "\n",
+    "\n",
+    "def create_hv_dr_plot(x_data, color_data, x_dim, y_dim, color_var, xaxis_label, yaxis_label, width=300, height=300, datashading=False):\n",
+    "    \"\"\"\n",
+    "    Helper function to create a single dimensionality reduction scatter plot with Holoviews and optional datashading.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - x_data: numpy.ndarray, dimensionality reduction data.\n",
+    "    - color_data: numpy.ndarray, color values (categorical or continuous).\n",
+    "    - x_dim, y_dim: int, indices for components.\n",
+    "    - color_var: str, the name of the coloring variable.\n",
+    "    - xaxis_label, yaxis_label: str, labels for the axes.\n",
+    "    - width, height: int, dimensions of the plot.\n",
+    "    - datashading: bool, whether to apply Datashader.\n",
+    "\n",
+    "    Returns:\n",
+    "    - hv.Element: A configured HoloViews scatter plot or datashaded plot.\n",
+    "    \"\"\"\n",
+    "    # print(color_var, color_data.dtype.name)\n",
+    "    cats = ['category', 'categorical', 'bool']\n",
+    "    if color_data.dtype.name in cats:  # Categorical data\n",
+    "        # print('categorical')\n",
+    "        cmap = cc.b_glasbey_category10\n",
+    "        show_legend = True\n",
+    "        colorbar = False\n",
+    "    else:  # Continuous data\n",
+    "        # print('continuous')\n",
+    "        cmap = 'Viridis_r'\n",
+    "        show_legend = False\n",
+    "        colorbar = True\n",
+    "\n",
+    "    # Create the base plot\n",
+    "    plot = hv.Points(\n",
+    "        (x_data[:, x_dim], x_data[:, y_dim], color_data),\n",
+    "        [xaxis_label, yaxis_label], color_var\n",
+    "    ).opts(\n",
+    "        color=color_var,\n",
+    "        cmap=cmap,\n",
+    "        size=1,\n",
+    "        alpha=0.5,\n",
+    "        colorbar=colorbar,\n",
+    "        padding=0,\n",
+    "        tools=['hover'],\n",
+    "        show_legend=show_legend,\n",
+    "    )\n",
+    "\n",
+    "    if datashading:\n",
+    "        if color_data.dtype.name in cats:\n",
+    "            plot = hd.rasterize(plot, aggregator=ds.by(color_var, ds.count())).opts(cmap=cmap)\n",
+    "            plot = hd.dynspread(plot, threshold=.5)\n",
+    "            # Create a fake legend overlay for categorical case\n",
+    "            unique_categories = np.unique(color_data)\n",
+    "            color_key = dict(zip(unique_categories, (cmap[i % len(cmap)] for i in range(len(unique_categories)))))\n",
+    "            legend_overlay = hv.NdOverlay({\n",
+    "                str(cat): hv.Points([(0, 0)], label=str(cat)).opts(\n",
+    "                    color=color_key[cat],\n",
+    "                    size=0,\n",
+    "                    legend_position='right',\n",
+    "                    legend_cols = len(unique_categories) // 5,\n",
+    "                )\n",
+    "                for cat in unique_categories\n",
+    "            })\n",
+    "            plot = (plot * legend_overlay).opts(show_legend=True, legend_limit = len(unique_categories)+1) # legend still not displaying when more than a few\n",
+    "            # print(unique_categories)\n",
+    "        else:\n",
+    "            plot = hd.rasterize(plot, aggregator=ds.mean(color_var)).opts(cmap=cmap, colorbar=colorbar)\n",
+    "            plot = hd.dynspread(plot, threshold=.5)\n",
+    "    return plot.opts(\n",
+    "        title=f\"{color_var}\",\n",
+    "        tools=['hover'],\n",
+    "        show_legend=show_legend,\n",
+    "        width=width,\n",
+    "        height=height\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def hv_dr_plot_layout(adata, color, dimensions, dr_method=('X_pca', 'PCA')):\n",
+    "    \"\"\"\n",
+    "    Create a static layout of dimensionality reduction scatter plots.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - adata: AnnData object containing dimensionality reduction data in `.obsm` and metadata in `.obs`.\n",
+    "    - color: list of str, coloring variables for each plot.\n",
+    "    - dimensions: list of tuples, specifying component indices.\n",
+    "    - dr_method: tuple, (key for the dimensionality reduction data in `.obsm`, label for the method).\n",
+    "\n",
+    "    Returns:\n",
+    "    - hv.Layout: A layout of scatter plots.\n",
+    "    \"\"\"\n",
+    "    dr_key, dr_label = dr_method\n",
     "    plots = []\n",
-    "    x_pca = adata.obsm['X_pca']\n",
+    "    x_data = adata.obsm[dr_key]\n",
     "    for color_var, (x_dim, y_dim) in zip(color, dimensions):\n",
     "        color_data = adata.obs[color_var].values\n",
-    "        if color_var == \"sample\": # Categorical\n",
-    "            cmap = ['blue', 'orange']\n",
-    "            show_legend = True\n",
-    "            colorbar=False\n",
-    "        elif color_var == \"pct_counts_mt\": # Continuous\n",
-    "            cmap = 'Viridis'\n",
-    "            show_legend = False\n",
-    "            colorbar=True\n",
-    "\n",
-    "        plot = hv.Scatter(\n",
-    "            (x_pca[:, x_dim], x_pca[:, y_dim], color_data),\n",
-    "            f'PC{x_dim + 1}',\n",
-    "            [f'PC{y_dim + 1}', color_var]\n",
-    "        ).opts(\n",
-    "            color=color_var,\n",
-    "            cmap=cmap,\n",
-    "            title=color_var,\n",
-    "            size=1,\n",
-    "            alpha=0.5,\n",
-    "            tools=['hover'],\n",
-    "            show_legend=show_legend,\n",
-    "            frame_width=300, frame_height=300,\n",
-    "            colorbar=colorbar,\n",
+    "        plot = create_hv_dr_plot(\n",
+    "            x_data, color_data, x_dim, y_dim, color_var,\n",
+    "            f'{dr_label} {x_dim + 1}', f'{dr_label} {y_dim + 1}', width=350, height=300,\n",
+    "            datashading=True,\n",
     "        )\n",
     "        plots.append(plot)\n",
+    "\n",
     "    layout = hv.Layout(plots).opts(shared_axes=False, axiswise=True)\n",
     "    return layout\n",
     "\n",
-    "layout = hv_pca_plots(\n",
-    "    adata = adata,\n",
+    "\n",
+    "layout = hv_dr_plot_layout(\n",
+    "    adata=adata,\n",
     "    color=[\"sample\", \"sample\", \"pct_counts_mt\", \"pct_counts_mt\"],\n",
     "    dimensions=[(0, 1), (2, 3), (0, 1), (2, 3)],\n",
+    "    dr_method=('X_pca', 'PCA')\n",
     ")\n",
     "layout.cols(2)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5058451b-446d-4ecf-8121-900fa7d3d612",
+   "metadata": {},
+   "source": [
+    "with HoloViz v2 (UI for axes and coloring):"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a2166d9-bb4d-44ba-a91b-1c02bb863554",
+   "id": "4f11a043-798a-4347-bc5f-92abcb31f80f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import holoviews as hv\n",
-    "import panel as pn\n",
+    "from panel.io import hold\n",
     "\n",
-    "hv.extension('bokeh')\n",
-    "pn.extension()\n",
-    "\n",
-    "def create_interactive_pca_app(adata):\n",
-    "    \"\"\"\n",
-    "    Create an interactive PCA visualization app with dropdowns for axes and color.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - adata: AnnData object containing PCA data in `.obsm['X_pca']` and metadata in `.obs`.\n",
-    "\n",
-    "    Returns:\n",
-    "    - panel.Column: The app layout.\n",
-    "    \"\"\"\n",
-    "    # PCA data and variable lists\n",
-    "    x_pca = adata.obsm['X_pca']\n",
-    "    num_pcs = x_pca.shape[1]\n",
-    "    pca_options = [f\"PC{i+1}\" for i in range(num_pcs)]  # PCA axis labels\n",
+    "def create_dr_app(adata, datashade=True):\n",
+    "    dr_options = {key: key.split('_')[1].upper() for key in adata.obsm.keys()}\n",
+    "    initial_dr_key = list(dr_options.keys())[0]  # Use the first available reduction as default\n",
+    "    x_data = adata.obsm[initial_dr_key]\n",
+    "    num_dims = x_data.shape[1]\n",
+    "    dim_options = [f\"{dr_options[initial_dr_key]} {i+1}\" for i in range(num_dims)]\n",
     "    color_options = list(adata.obs.columns)  # Use all columns from `.obs`\n",
     "\n",
-    "    # Widgets\n",
-    "    xaxis = pn.widgets.Select(name='X-axis', options=pca_options, value='PC1')\n",
-    "    yaxis = pn.widgets.Select(name='Y-axis', options=pca_options, value='PC2')\n",
+    "    dr_select = pn.widgets.Select(name='Dimensionality Reduction', options=list(dr_options.keys()), value=initial_dr_key)\n",
+    "    xaxis = pn.widgets.Select(name='X-axis', options=dim_options, value=dim_options[0])\n",
+    "    yaxis = pn.widgets.Select(name='Y-axis', options=dim_options, value=dim_options[1])\n",
     "    color = pn.widgets.Select(name='Color', options=color_options, value=color_options[0])\n",
+    "    datashading_switch = pn.widgets.Checkbox(name='Enable Datashader', value=datashade)\n",
     "\n",
-    "    # Function to update the plot dynamically\n",
-    "    def update_plot(xaxis, yaxis, color):\n",
-    "        # Convert PCA axis labels to indices\n",
-    "        x_dim = int(xaxis[2:]) - 1\n",
-    "        y_dim = int(yaxis[2:]) - 1\n",
-    "\n",
-    "        # Determine color data\n",
+    "    def update_plot(dr_select, xaxis, yaxis, color, datashading):\n",
+    "        x_data = adata.obsm[dr_select]\n",
+    "        x_dim = int(xaxis.split()[-1]) - 1\n",
+    "        y_dim = int(yaxis.split()[-1]) - 1\n",
     "        color_data = adata.obs[color].values\n",
-    "        if adata.obs[color].dtype.name == 'category':  # Categorical\n",
-    "            cmap = 'Category10'\n",
-    "            show_legend = True\n",
-    "            colorbar = False\n",
-    "        else:  # Continuous\n",
-    "            cmap = 'Viridis'\n",
-    "            show_legend = False\n",
-    "            colorbar = True\n",
+    "        dr_label = dr_options[dr_select]\n",
     "\n",
-    "        # Create the scatter plot\n",
-    "        plot = hv.Scatter(\n",
-    "            (x_pca[:, x_dim], x_pca[:, y_dim], color_data),\n",
-    "            xaxis, [yaxis, color]\n",
-    "        ).opts(\n",
-    "            color=color,\n",
-    "            cmap=cmap,\n",
-    "            title=f\"{xaxis} vs {yaxis}\",\n",
-    "            size=5,\n",
-    "            alpha=0.5,\n",
-    "            tools=['hover'],\n",
-    "            show_legend=show_legend,\n",
-    "            colorbar=colorbar,\n",
-    "            frame_width=600, frame_height=400\n",
+    "        return create_hv_dr_plot(\n",
+    "            x_data, color_data, x_dim, y_dim, color,\n",
+    "            xaxis, yaxis, width=550, height=500, datashading=datashading\n",
     "        )\n",
-    "        return plot\n",
     "\n",
-    "    # Bind widgets to the update function\n",
-    "    plot_pane = pn.bind(\n",
-    "        update_plot, xaxis=xaxis, yaxis=yaxis, color=color\n",
-    "    )\n",
+    "    # Update all axis options (simultaneously with @hold) when dimensionality reduction method changes\n",
+    "    @hold()\n",
+    "    def update_axis_options(event):\n",
+    "        x_data = adata.obsm[event.new]\n",
+    "        num_dims = x_data.shape[1]\n",
+    "        dr_label = dr_options[event.new]\n",
+    "        dim_options = [f\"{dr_label} {i+1}\" for i in range(num_dims)]\n",
+    "        xaxis.options = dim_options\n",
+    "        yaxis.options = dim_options\n",
+    "        xaxis.value = dim_options[0]\n",
+    "        yaxis.value = dim_options[1]\n",
     "\n",
-    "    # Layout the app\n",
-    "    app = pn.Column(\n",
-    "        pn.Row(pn.WidgetBox(xaxis, yaxis, color, width=250)),\n",
-    "        plot_pane\n",
-    "    )\n",
+    "    dr_select.param.watch(update_axis_options, 'value')\n",
+    "\n",
+    "    def enforce_different_axes(event):\n",
+    "        if xaxis.value == yaxis.value:\n",
+    "            available_options = [opt for opt in yaxis.options if opt != xaxis.value]\n",
+    "            if available_options:\n",
+    "                yaxis.value = available_options[0]\n",
+    "\n",
+    "    xaxis.param.watch(enforce_different_axes, 'value')\n",
+    "    yaxis.param.watch(enforce_different_axes, 'value')\n",
+    "\n",
+    "    plot_pane = pn.bind(update_plot, dr_select=dr_select, xaxis=xaxis, yaxis=yaxis, color=color, datashading=datashading_switch)\n",
+    "\n",
+    "    app = pn.Row(pn.WidgetBox(dr_select, xaxis, yaxis, color, datashading_switch), plot_pane)\n",
     "    return app\n",
     "\n",
     "\n",
-    "# Example usage\n",
-    "layout = create_interactive_pca_app(adata)\n",
-    "layout\n"
+    "interactive_app = create_dr_app(adata, datashade=True)\n",
+    "interactive_app.servable()"
    ]
   },
   {
@@ -682,9 +751,44 @@
     "sc.pl.umap(\n",
     "    adata,\n",
     "    color=\"sample\",\n",
-    "    # Setting a smaller point size to get prevent overlap\n",
+    "    # Setting a smaller point size to prevent overlap\n",
     "    size=2,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d336906-9a29-41cb-a8ef-3258e1d4e9bb",
+   "metadata": {},
+   "source": [
+    "with HoloViz:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1573d42d-7a9d-4dd8-b53a-65779d209e6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout = hv_dr_plot_layout(\n",
+    "    adata=adata,\n",
+    "    color=[\"sample\", \"pct_counts_mt\"],\n",
+    "    dimensions=[(0, 1), (0, 1)],\n",
+    "    dr_method=('X_umap', 'UMAP')\n",
+    ")\n",
+    "layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4af4193a-cc23-4bf2-8d90-dec26a958800",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interactive_app.objects[0][0].value='X_umap'\n",
+    "interactive_app"
    ]
   },
   {
@@ -734,6 +838,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "210bf47c-64be-4a37-a6ef-dc869c4db352",
+   "metadata": {},
+   "source": [
+    "with HoloViz:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e70ebdb7-16e9-46b4-a367-08989d6ed448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout = hv_dr_plot_layout(\n",
+    "    adata=adata,\n",
+    "    color=[\"sample\", \"leiden\"],\n",
+    "    dimensions=[(0, 1), (0, 1)],\n",
+    "    dr_method=('X_umap', 'UMAP')\n",
+    ")\n",
+    "layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b587a995-df5b-4f20-bfcd-5df259b3fe1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_w_leiden = create_dr_app(adata, datashade=True)\n",
+    "app_w_leiden.objects[0][0].value='X_umap'\n",
+    "app_w_leiden.objects[0][3].value='leiden'\n",
+    "app_w_leiden.servable()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d7410a1-333a-4f21-b53e-91af768b07c7",
    "metadata": {},
    "source": [
@@ -761,6 +902,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b14802ae-cd83-4ddb-9afc-0d59a91f5e22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(0, 1)*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8c255f6-29b6-4c0a-bd52-d080bb4802be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout = hv_dr_plot_layout(\n",
+    "    adata=adata,\n",
+    "    color=[\"leiden\", \"predicted_doublet\", \"doublet_score\"],\n",
+    "    dimensions=[(0, 1)] *3,\n",
+    "    dr_method=('X_umap', 'UMAP')\n",
+    ")\n",
+    "layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "91ad2b94-ab9b-48a3-aa0c-551203d3cf91",
    "metadata": {},
    "outputs": [],
@@ -771,6 +938,22 @@
     "    wspace=0.5,\n",
     "    ncols=2,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2f2ceea-81d3-406e-bc76-45baf05c4426",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout = hv_dr_plot_layout(\n",
+    "    adata=adata,\n",
+    "    color=[\"leiden\", \"log1p_total_counts\", \"pct_counts_mt\", \"log1p_n_genes_by_counts\"],\n",
+    "    dimensions=[(0, 1)]*4,\n",
+    "    dr_method=('X_umap', 'UMAP')\n",
+    ")\n",
+    "layout.cols(2)"
    ]
   },
   {
@@ -1262,6 +1445,16 @@
    "metadata": {},
    "source": [
     "### Alt, Convert the obs and var to pandas df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "925d2346-546a-4904-91a1-638296c32136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.obsm['X_umap'].shape"
    ]
   },
   {
