--- a/demos/scanpy-clustering/holoviz_scanpy.ipynb
+++ b/demos/scanpy-clustering/holoviz_scanpy.ipynb
@@ -26,16 +26,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "import numpy as np\n",
+    "import pooch\n",
     "import scanpy as sc\n",
     "import anndata as ad\n",
-    "import pooch\n",
     "\n",
-    "from hv_cancer_modules import DotPlot, UMAPPlot\n",
-    "import holoviews as hv \n",
+    "import pandas as pd\n",
+    "import hvplot.pandas #noqa\n",
+    "import datashader as ds\n",
+    "import colorcet as cc\n",
+    "import hv_cancer_modules as hvc\n",
+    "import holoviews as hv\n",
+    "\n",
     "hv.extension('bokeh')"
    ]
   },
@@ -541,9 +549,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import hvplot.pandas #noqa\n",
-    "\n",
     "pca_df = pd.DataFrame(adata.obsm[\"X_pca\"], columns=[f\"PCA{i+1}\" for i in range(adata.obsm[\"X_pca\"].shape[-1])], index=adata.obs_names)\n",
     "pca_df = pca_df.join(adata.obs)"
    ]
@@ -759,7 +764,10 @@
     "    plots = []\n",
     "    x_data = adata.obsm[dr_key]\n",
     "    for color_var, (x_dim, y_dim) in zip(color, dimensions):\n",
-    "        color_data = adata.obs[color_var].values\n",
+    "        try: # color per derived obs\n",
+    "            color_data = adata.obs[color_var].values\n",
+    "        except: # color per gene expression\n",
+    "            color_data = adata.X.getcol(adata.var_names.get_loc(color_var)).toarray().flatten()\n",
     "        plot = create_hv_dimreduction_plot(\n",
     "            x_data, color_data, x_dim, y_dim, color_var,\n",
     "            f'{dr_label}{x_dim + 1}', f'{dr_label}{y_dim + 1}',\n",
@@ -770,6 +778,16 @@
     "        )\n",
     "        plots.append(plot)\n",
     "    return hv.Layout(plots).opts(shared_axes=False, axiswise=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f6a23ed-73f5-4c0e-8641-08b12d1ca979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adata.X[:,adata.var_names.get_loc('FAM87B')]"
    ]
   },
   {
@@ -1335,26 +1353,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37a37d2a-30e8-4578-87c1-ba07663637a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from hv_cancer_modules import DotPlot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f5a7e8ae-a686-4bb2-aecc-845098d329f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DotPlot(\n",
+    "hvc.DotPlot(\n",
     "    adata=adata,\n",
     "    marker_genes=marker_genes,\n",
     "    groupby='leiden_res_0.02',\n",
     "    max_dot_size=10,\n",
-    ").opts(height=150, width=1200, responsive=False)"
+    ")"
    ]
   },
   {
@@ -1364,9 +1372,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: organize, sort, and annotate the genes\n",
-    "# TODO: add dot size legend\n",
-    "# normalize dot size per cluster/gene?"
+    "# TODO: add hierarchical ticks\n",
+    "# TODO: add dot size legend"
    ]
   },
   {
@@ -1411,7 +1418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DotPlot(\n",
+    "hvc.DotPlot(\n",
     "    adata=adata,\n",
     "    marker_genes=marker_genes,\n",
     "    groupby=\"cell_type_lvl1\",\n",
@@ -1475,18 +1482,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6828d64e-633f-42a0-9b54-50d987a5460f",
+   "cell_type": "markdown",
+   "id": "68d847a5-ec6b-4417-91b6-5bd15236783b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "DotPlot(\n",
-    "    adata=adata,\n",
-    "    marker_genes=marker_genes,\n",
-    "    groupby=\"leiden_res_0.50\",\n",
-    "    max_dot_size=10,\n",
-    ").opts(height=150, width=1200, responsive=False)"
+    "with holoviz:"
    ]
   },
   {
@@ -1496,8 +1496,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: add dendrogram\n",
-    "# TODO: add functionality for using top n DE genese"
+    "# TODO: add dotplot functionality for using `rank_genes_groups_df` to get top n DE genes per leiden cluster\n",
+    "# TODO: add dendrogram"
    ]
   },
   {
@@ -1546,36 +1546,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8fa4510-9aef-4d28-a557-7bf9e2e895ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dc_cluster_genes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8385d50-51f7-476e-9db8-ce154717c9d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[*dc_cluster_genes, \"leiden_res_0.50\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c323ac85-675f-478e-94ee-61095a329ba9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "25dc67f2-5ffe-4575-9926-d14915f9202c",
    "metadata": {},
    "outputs": [],
@@ -1587,17 +1557,7 @@
     "    dim_reduction='X_umap',\n",
     "    labels=True,\n",
     ")\n",
-    "layout"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7affba67-fc77-47a1-ae3b-3ffd7622865c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: allow for using gene expression levels as color cols??"
+    "layout.cols(3)"
    ]
   },
   {
