--- a/demos/scanpy-clustering/holoviz_scanpy.ipynb
+++ b/demos/scanpy-clustering/holoviz_scanpy.ipynb
@@ -36,6 +36,8 @@
     "import colorcet as cc\n",
     "\n",
     "import holoviews as hv\n",
+    "from holoviews.operation import datashader as hd\n",
+    "\n",
     "hv.extension('bokeh')"
    ]
   },
@@ -261,7 +263,21 @@
     "          show_grid=True,\n",
     "          title='pct_counts_mt',\n",
     "))\n",
-    "scatter"
+    "\n",
+    "# Optionally, apply rasterization/datashading\n",
+    "rast_scatter = hd.rasterize(scatter)\n",
+    "rast_scatter.opts(\n",
+    "    cmap='Viridis',\n",
+    "    xticks=[0, 50000, 100000, 150000],\n",
+    "    padding=.05,\n",
+    "    show_grid=True,\n",
+    "    title='pct_counts_mt',\n",
+    "    colorbar=True,\n",
+    "    aspect=1,\n",
+    "    frame_width=300,\n",
+    "    tools=['hover'],\n",
+    "    cnorm='eq_hist', # eq_hist normalizes the color range\n",
+    ")"
    ]
   },
   {
@@ -609,17 +625,6 @@
     "Since adata.obsm['X_pca'] is a 2D array, with a column per pca dim, we'll access the array data that we want directly rather than using the anndata interface.\n",
     "\n",
     "TODO: add adata.obs and selectively pass certain vdims to view other info in hover cols"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4cb348e0-c483-492f-b1ca-7cfe182f2804",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hd.dynspread(\n",
-    "    hd.rasterize(hv.Points(([1,2],[1,2],['a','b']), ['x', 'y'], 'color_var'), aggregator=ds.count_cat('color_var'))).opts(padding=1, cmap='Category10')"
    ]
   },
   {
@@ -1602,7 +1607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   },
   "mystnb": {
    "execution_mode": "off"
