--- a/workflow-sketches/01-atlas-celltype-markers.ipynb
+++ b/workflow-sketches/01-atlas-celltype-markers.ipynb
@@ -5,33 +5,48 @@
    "id": "ec8f0463-0002-40b2-9a3e-2af8af380b5d",
    "metadata": {},
    "source": [
-    "# Benign prostate cell atlas\n",
+    "# Benign Prostate Cell Atlas\n",
+    "\n",
+    "## Introduction\n",
+    "With an atlas of multiple single-cell RNA samples, visualize the cell types, the distribution of cell types within each sample, and some of the marker gene characteristics. Basic Figure 1 for an atlas.\n",
+    "- [TODO: directly address the 'Why?' and provide more context. I'm assuming this workflow is a sort of check on the assigned cell typing and to determine if there are any big sample-associated differences.]\n",
     "\n",
     "Though these plots are with benign prostate, the `.h5ad` should be easily swappable with any number of atlases from CZI cellxgene or other sources.\n",
     "\n",
-    "## Motivation\n",
-    "With an atlas of multiple single-cell RNA samples, visualize the cell types, the distribution of cell types within each sample, and some of the marker gene characteristics. Basic Figure 1 for an atlas.\n",
+    "## Workflow Steps\n",
+    "1. Visualize UMAP features of cell clustering to determine if cell types are well-separated.\n",
+    "2. Visualize cell type distribution within each sample to detect sample-associated differences.\n",
+    "3. Visualize marker genes for each cell type to validate cell type assignments.\n",
     "\n",
-    "## Inputs\n",
+    "## Workflow Input Data\n",
     "* pre-processed AnnData atlas, with `.obsm` for:\n",
     "  * UMAP embeddings\n",
     "  * cell typings for each cell\n",
     "  * sample name for each cell\n",
-    "* Mapping of cell type --> list of marker genes. This could be from a subject matter expert, or automatically generated from a stats tool or an SCVerse tool."
+    "* Mapping of cell type --> list of marker genes. This could be from a subject matter expert, or automatically generated from a stats tool or an SCVerse tool.\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "dfcc9316-74bb-44d9-a237-52d31831c350",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Figure A\n",
-    "# Plot of the cell types\n",
+    "## Figure A: UMAP of Cell Type and Sample Source\n",
     "\n",
-    "# Additional interactivity: swap the cell point coloring \n",
-    "# and legend with the sample source of each cell, instead of the assigned cell type"
+    "### Questions:\n",
+    "- How are different cell types distributed in our spatial embedding, and do they form distinct clusters?\n",
+    "- Are there any unexpected mixing patterns between cell types?\n",
+    "\n",
+    "### Features:\n",
+    "- Switch the cell point coloring between assigned cell type and sample source of each cell.\n",
+    "\n",
+    "### Inputs:\n",
+    "- UMAP coordinates for each cell\n",
+    "- Cell type annotations\n",
+    "- Sample source identifiers\n",
+    "\n",
+    "### Expected Output/Evaluation:\n",
+    "Well-defined cell type clusters with minimal batch effects would show as distinct color regions in cell type view, but evenly distributed sample colors in sample view."
    ]
   },
   {
@@ -48,20 +63,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b525775e-7490-4f93-bcb6-189f1b969310",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Figure B\n",
-    "# Cell type distribution per sample\n",
+    "## Figure B: Cell Type Distribution Per Sample\n",
     "\n",
-    "# This could also be a stacked bar plot, to show the \n",
-    "# difference in number of cells between samlpes\n",
+    "### Questions:\n",
+    "- What is the relative abundance of each cell type across samples?\n",
+    "- Are there any notable sample-specific variations?\n",
     "\n",
-    "# Potential interactivity: highlighting or subsetting the UMAP \n",
-    "# based on selection of patients or cell types in the bar plots"
+    "### Features:\n",
+    "- Linked selection with Figure A UMAP plot to provide context for where specific sample populations exist in UMAP feature space.\n",
+    "    - [TODO: Add xaction to click on a sample in the bar plot to highlight the corresponding UMAP points.]\n",
+    "- Linked selection with Figure C DotMap plot to provide context for marker gene specificity of selected sample.\n",
+    "- Toggle between absolute and percentage-based cell counts to facilitate comparison and avoid contextualizing differences in sample size.\n",
+    "\n",
+    "### Inputs:\n",
+    "- Cell type annotations\n",
+    "- Sample identifiers\n",
+    "- Cell counts per type per sample\n",
+    "\n",
+    "### Expected Output/Evaluation:\n",
+    "While allowing for biological variation, look for highly inconsistent cell type proportions in samples.\n",
+    "[TODO: Maybe add a metric (chi-square test?) to quantify the consistency of cell type proportions across samples and maybe sort the samples by this metric.]"
    ]
   },
   {
@@ -78,16 +103,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "08ef7ce5-8659-4c79-83e3-0180dc8b267f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Figure C\n",
-    "# Marker gene distribution\n",
+    "## Figure C: Marker Gene Distribution\n",
     "\n",
-    "# Alternative plots: heatmap (maybe tracksplot....)"
+    "### Questions:\n",
+    "- Do canonical markers adequately define our cell types?\n",
+    "- Are there any marker genes showing unexpected expression patterns?\n",
+    "\n",
+    "### Features:\n",
+    "- Toggle heatmap to collapse fraction of cell in group.\n",
+    "- Toggle/Tab tracksplot to expand view to include expression level of every cell in assigned cell-type cluster.\n",
+    "\n",
+    "### Inputs:\n",
+    "- Gene expression matrix\n",
+    "- Cell type annotations\n",
+    "- Marker gene list per cell type\n",
+    "\n",
+    "### Expected Output/Evaluation:\n",
+    "Expect high expression of markers in their assigned cell types with minimal expression elsewhere."
    ]
   },
   {
@@ -102,6 +138,37 @@
    "source": [
     "![image.png](attachment:9b88d114-f30f-4da4-92e7-c97d9f22d082.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03b4df6a",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "## Putting it all together:\n",
+    "\n",
+    "Make an interactive dashboard by laying out and interlinking the plots. Add a template and make as servable so it can be deployed as a standalone web application.\n",
+    "\n",
+    "[TODO: make app]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5e35073",
+   "metadata": {},
+   "source": [
+    "## Next Steps\n",
+    "[TODO: Provide some ideas for next steps]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bf70f94",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
