--- a/workflow-sketches/01-atlas-celltype-markers.ipynb
+++ b/workflow-sketches/01-atlas-celltype-markers.ipynb
@@ -8,8 +8,9 @@
     "# Benign Prostate Cell Atlas\n",
     "\n",
     "## Introduction\n",
-    "With an atlas of multiple single-cell RNA samples, visualize the cell types, the distribution of cell types within each sample, and some of the marker gene characteristics. Basic Figure 1 for an atlas.\n",
-    "- [TODO: directly address the 'Why?' and provide more context. I'm assuming this workflow is a sort of check on the assigned cell typing and to determine if there are any big sample-associated differences.]\n",
+    "With an atlas of multiple single-cell RNA samples, visualize the cell types, the distribution of cell types within each sample, and some of the marker gene characteristics. Basic Figure 1 for an atlas paper.\n",
+    "\n",
+    "Cell atlases should describe the basic cell types found, how the are distrbuted in individual samples, and key defining marker genes for each of the cell types. The goal is generally to allow future researchers to better navigate the cell types and expressed genes in similar types of samples.\n",
     "\n",
     "Though these plots are with benign prostate, the `.h5ad` should be easily swappable with any number of atlases from CZI cellxgene or other sources.\n",
     "\n",
@@ -85,8 +86,10 @@
     "- Cell counts per type per sample\n",
     "\n",
     "### Expected Output/Evaluation:\n",
-    "While allowing for biological variation, look for highly inconsistent cell type proportions in samples.\n",
-    "[TODO: Maybe add a metric (chi-square test?) to quantify the consistency of cell type proportions across samples and maybe sort the samples by this metric.]"
+    "* While allowing for biological variation, look for highly inconsistent cell type proportions in samples.\n",
+    "* Mark outlier samples or cell types for more detailed investigation\n",
+    "  * For example: if immune cells in particular ore off, look for additional marker genes to be added to the set\n",
+    "* [TODO: Maybe add a metric (chi-square test?) to quantify the consistency of cell type proportions across samples and maybe sort the samples by this metric. There may be metrics in existing atlas papers, otherwise this could be a good quick pub]"
    ]
   },
   {
@@ -161,7 +164,9 @@
    "metadata": {},
    "source": [
     "## Next Steps\n",
-    "[TODO: Provide some ideas for next steps]"
+    "\n",
+    "* Compare novel marker genes to expression in HCA or other large sets in cellxgene\n",
+    "* "
    ]
   },
   {
