--- a/workflow-sketches/02-atlas-signature-analysis.ipynb
+++ b/workflow-sketches/02-atlas-signature-analysis.ipynb
@@ -11,7 +11,14 @@
     "\n",
     "Often times in analysis there will be a scalar scoring of each cell for various attributes. In this example, the score is for benign prostatic hyperplasia (BPH), and is a function of a small number of gene's expression.\n",
     "\n",
-    "The goal is to find which cell types exhibit high score and to examine those cells.\n",
+    "The goal here is to find which cell types exhibit high score and to examine those cells.\n",
+    "\n",
+    "## Overview of Workflow Steps\n",
+    "\n",
+    "1. Select the cell types with the strongest signal\n",
+    "2. Reanalyze the subset of data, looking for finer-grained cell types and associated marker genes\n",
+    "3. Evaluate the score across the new cell types\n",
+    "4. Evaluate the distribution of these new cell types across patient samples, looking for correlation with other clinical factors associated with the cell type prevalance.\n",
     "\n",
     "## Input\n",
     "\n",
@@ -23,17 +30,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9963908e-d61d-487a-ae49-1e0210753402",
+   "cell_type": "markdown",
+   "id": "ade81fb8-21f4-4237-8604-2e7d56776754",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Figure A\n",
-    "# Violin plots of signature across cell types\n",
+    "## Figure A: Violin plots of signature across cell types\n",
     "\n",
-    "# Action by the user: selection of cell types for further analysis.\n",
-    "# In particular \"Fibroblast\" and \"Smooth_Muscle\""
+    "### Questions:\n",
+    "* Which cell types show particularly high or low levels of signal?\n",
+    "* Does the signal distinguish cell types?\n",
+    "\n",
+    "### Expected output/evaluation\n",
+    "* Action by the user: selection of cell types for further analysis.\n",
+    "* In this example, \"Fibroblast\" and \"Smooth_Muscle\" are selected."
    ]
   },
   {
@@ -50,26 +59,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3757ee00-e79c-49e4-a32f-76dab140aa96",
+   "cell_type": "markdown",
+   "id": "eb3b37e1-c501-464d-8863-0a5206126a04",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Figure B\n",
-    "# Cluster the subset and name the clusters\n",
+    "## Figure B: Cluster the subset, derive cluster names\n",
     "\n",
-    "# subdata = adata[]\n",
+    "### Computational steps performed outside the visualization:\n",
     "\n",
-    "# Perform the following operations\n",
-    "# 1) clustering\n",
-    "# 2) differential gene expression of the clusters\n",
-    "# 3) selection of key marker genes per cluster\n",
-    "# 4) visualization of the clustering via UMAP\n",
-    "# 5) visualization of the clustering by dot plot \n",
+    "1) subset data & clustering\n",
+    "2) differential gene expression of the clusters\n",
+    "3) manual/automatic selection of key marker genes per cluster\n",
     "\n",
-    "# Interactively visualize the UMAP plot, coloring points by both cell types and\n",
-    "# by expression of the genes found from differential gene expression"
+    "## Paired visualization\n",
+    "* visualization of the clustering via UMAP\n",
+    "* visualization of the clustering by dot plot and key marker genes\n",
+    "\n",
+    "### Questions:\n",
+    "* What genes define the clusters?\n",
+    "* What cell types contribute most to each cluster?\n",
+    "* What is a descriptive name for the finer cell types?\n",
+    "\n",
+    "## Expected output\n",
+    "* New `.obsm` factor describing the new cell types"
    ]
   },
   {
@@ -90,14 +102,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c7e7dbe-00e7-453a-b05e-162c674ecbd4",
+   "cell_type": "markdown",
+   "id": "200431fc-3e4d-406f-b70a-a3ed7dc871e3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Figure C\n",
-    "# Evaluate the clustering against the original BPH signal"
+    "## Figure C: Evaluate the new cell types against the original BPH signal\n",
+    "\n",
+    "### Questions:\n",
+    "* Do the new clusters explain much of the BPH signal variance?\n",
+    "* Which cell types have particularly high or low signal\n",
+    "\n",
+    "### Features\n",
+    "* swappable UMAP point color (signal, new clusterings, original clusterings)\n",
+    "\n",
+    "### Evaluation/Output\n",
+    "* Did this clustering provide additonal explanatory power, or were the original clusters just as useful?"
    ]
   },
   {
@@ -114,14 +133,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22bfbdba-1e0d-4450-bebb-5d529505da9f",
+   "cell_type": "markdown",
+   "id": "67f73152-c857-40f3-9596-39ef41fd2397",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Figure D\n",
-    "# Evaluate the subtypings aganist samples and clinical attributes of the samples"
+    "## Figure D: Evaluate the subtypings aganist samples and clinical attributes of the samples\n",
+    "\n",
+    "### Questions:\n",
+    "* In general, how does the new typing correlate with other clinical factors in the atlas?\n",
+    "* Does each cell type show up in all the samples? Only some of the samples?\n",
+    "* Does one of the new cell types explain/correlate with prostate hyperplasia (> 100g)?\n",
+    "\n",
+    "### Features:\n",
+    "* Todo: can interactivity improve this plot pair?\n",
+    "\n",
+    "### Evaluation/Expected Output\n",
+    "* If there is interesting clinical signal in the new subtypes, generate static figs for the manuscript\n",
+    "* Potentially back-propagate the new celltype partioning back to the full dataset"
    ]
   },
   {
