--- a/workflow-sketches/00_FeatureMap.ipynb
+++ b/workflow-sketches/00_FeatureMap.ipynb
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_basic_plot(x_data, x_dim, y_dim, xaxis_label, yaxis_label, width=300, height=300):\n",
+    "def create_basic_featuremap(x_data, x_dim, y_dim, xaxis_label, yaxis_label, width=300, height=300):\n",
     "    \"\"\"\n",
     "    Create a basic scatter plot of dimensional reduction data\n",
     "    \n",
@@ -399,13 +399,11 @@
     "    - xaxis_label, yaxis_label: str, labels for the axes\n",
     "    - width, height: int, dimensions of the plot\n",
     "    \"\"\"\n",
-    "    # Create a simple HoloViews Points plot\n",
     "    plot = hv.Points(\n",
     "        (x_data[:, x_dim], x_data[:, y_dim]),\n",
     "        [xaxis_label, yaxis_label]\n",
     "    )\n",
     "    \n",
-    "    # Set some basic options\n",
     "    plot = plot.opts(\n",
     "        size=1,\n",
     "        alpha=0.5,\n",
@@ -416,9 +414,8 @@
     "    \n",
     "    return plot\n",
     "\n",
-    "# Example: Create a basic PCA plot\n",
     "pca_data = adata.obsm['X_pca']\n",
-    "basic_plot = create_basic_plot(\n",
+    "basic_plot = create_basic_featuremap(\n",
     "    pca_data,\n",
     "    x_dim=0,\n",
     "    y_dim=1,\n",
@@ -473,7 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_hv_dimreduction_plot(\n",
+    "def create_featuremap_plot(\n",
     "    x_data, color_data, x_dim, y_dim, color_var, xaxis_label, yaxis_label,\n",
     "    width=300, height=300, datashading=False, labels=False,\n",
     "    cont_cmap = 'Viridis',\n",
@@ -608,7 +605,7 @@
     "            color_data = adata.obs[color_var].values\n",
     "        except: # color per gene expression\n",
     "            color_data = adata.X.getcol(adata.var_names.get_loc(color_var)).toarray().flatten()\n",
-    "        plot = create_hv_dimreduction_plot(\n",
+    "        plot = create_featuremap_plot(\n",
     "            x_data, color_data, x_dim, y_dim, color_var,\n",
     "            f'{dr_label}{x_dim + 1}', f'{dr_label}{y_dim + 1}',\n",
     "            width=width,\n",
@@ -619,7 +616,7 @@
     "        plots.append(plot)\n",
     "    return hv.Layout(plots).opts(shared_axes=False, axiswise=True)\n",
     "\n",
-    "def dimreduction_app(\n",
+    "def featuremap_app(\n",
     "    adata,\n",
     "    dim_reduction=None,\n",
     "    color_by=None,\n",
@@ -663,7 +660,7 @@
     "        y_dim = dim_mapping[yaxis_value]\n",
     "        color_data = adata.obs[color_value].values\n",
     "\n",
-    "        return create_hv_dimreduction_plot(\n",
+    "        return create_featuremap_plot(\n",
     "            x_data,\n",
     "            color_data,\n",
     "            x_dim,\n",
@@ -720,6 +717,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "67d74c73-96fc-4ad8-b461-a7d962590f18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "featuremap_app(adata, dim_reduction='X_umap', color_by='leiden')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e542268a-230f-46c7-96b0-0a9d7e47e700",
    "metadata": {},
    "outputs": [],
@@ -736,16 +743,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67d74c73-96fc-4ad8-b461-a7d962590f18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dimreduction_app(adata, dim_reduction='X_umap', color_by='leiden')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ada95f7e-7a76-43eb-899d-8f4db52ebd9f",
    "metadata": {},
    "outputs": [],
@@ -754,7 +751,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "nci",
    "language": "python",
    "name": "python3"
   },
@@ -768,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
