adding commented code to try ds selector

--- a/workflow-sketches/00_FeatureMap.ipynb
+++ b/workflow-sketches/00_FeatureMap.ipynb
@@ -64,7 +64,11 @@
     "import holoviews as hv\n",
     "\n",
     "pn.extension()\n",
-    "hv.extension('bokeh')"
+    "hv.extension('bokeh')\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore', message=\"Variable names are not unique\")\n",
+    "warnings.filterwarnings('ignore', message=\"Observation names are not unique\")"
    ]
   },
   {
@@ -119,8 +123,8 @@
     "    adatas[sample_id] = sample_adata\n",
     "\n",
     "adata = ad.concat(adatas, label=\"sample\")\n",
-    "adata.obs_names_make_unique()\n",
-    "adata.var_names_make_unique()\n",
+    "# adata.obs_names_make_unique()\n",
+    "# adata.var_names_make_unique()\n",
     "print(adata.obs[\"sample\"].value_counts())"
    ]
   },
@@ -492,7 +496,8 @@
     "    )\n",
     "    \n",
     "    plot = plot.opts(color=color_var, cmap=cmap, alpha=0.5,\n",
-    "                     tools=['hover'], legend_position='right',\n",
+    "                     # tools=['hover'],\n",
+    "                     legend_position='right',\n",
     "                    frame_width=300, frame_height=300)\n",
     "    \n",
     "    return plot, cmap\n",
@@ -578,7 +583,7 @@
     "    plot = plot.opts(\n",
     "        cmap=cmap,\n",
     "        colorbar=colorbar,\n",
-    "        tools=['hover'],\n",
+    "        # tools=['hover'],\n",
     "        frame_width=width,\n",
     "        frame_height=height,\n",
     "        title=f\"{color_var}\"\n",
@@ -775,9 +780,9 @@
     "        if is_categorical:\n",
     "            # For categorical data, count by category\n",
     "            aggregator = ds.count_cat(color_var)\n",
-    "            plot = hd.rasterize(plot, aggregator=aggregator)\n",
+    "            plot = hd.rasterize(plot, aggregator=aggregator)# selector=ds.first(xaxis_label))\n",
     "            plot = hd.dynspread(plot, threshold=0.5)\n",
-    "            plot = plot.opts(cmap=cmap, tools=['hover'])\n",
+    "            plot = plot.opts(cmap=cmap, tools=['hover'])#, hover_tooltips = [xaxis_label, yaxis_label, color_var])\n",
     "            \n",
     "            if labels:\n",
     "                # Add labels at median positions\n",
@@ -830,7 +835,7 @@
     "    \n",
     "    return plot.opts(\n",
     "        title=f\"{color_var}\",\n",
-    "        tools=['hover'],\n",
+    "        # tools=['hover'],\n",
     "        show_legend=show_legend,\n",
     "        frame_width=width,\n",
     "        frame_height=height\n",
@@ -850,7 +855,7 @@
     "    width=300,\n",
     "    height=300,\n",
     "    datashading=True,\n",
-    "    labels=True\n",
+    "    labels=True,\n",
     ")\n",
     "unified_plot"
    ]
@@ -1021,6 +1026,35 @@
     "    height=300,\n",
     ")\n",
     "app"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73e4de49-b206-45f3-b80d-fdf38b3f665b",
+   "metadata": {},
+   "source": [
+    "## Use a Packaged App"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc1d68c3-01db-4470-a01b-7f7f159e4dcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hv_anndata import FeatureMapApp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e56d82f8-1447-4574-8734-fda1a7c6caba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fmap = FeatureMapApp(adata=adata, reduction='X_umap', color_by='leiden')\n",
+    "fmap"
    ]
   },
   {
